# selva

./: .coveragerc  .gitignore  .pylintrc  .pytest.ini  .ruff.toml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
background/: index.html
configuration/: index.html
controllers/: index.html
docs/: 01-tutorial.md  configuration.md  controllers.md  index.md  logging.md  middleware.md  routing.md  services.md  structure.md  templates.md  tutorial.md
docs/en/: background.md  configuration.md  handlers.md  index.md  lifecycle.md  logging.md  routing.md  services.md  startup.md  structure.md  tutorial.md
docs/en/extensions/: overview.md
docs/en/middleware/: overview.md
docs/extensions/: jinja.md  mako.md  memcached.md  overview.md  redis.md  sqlalchemy.md
docs/extensions/templates/: jinja.md
docs/middleware/: overview.md  staticfiles_uploads.md
docs/pt/: background.md  configuration.md  handlers.md  index.md  lifecycle.md  logging.md  routing.md  services.md  startup.md  structure.md  tutorial.md
docs/pt/extensions/: overview.md
docs/pt/middleware/: overview.md  staticfiles_uploads.md
examples/: controllers.py  hello_world.py  routing.py  routing_module.py
examples/background_tasks/: application.py
examples/background_tasks/configuration/: settings.yaml
examples/celery/: requirements.txt
examples/celery/application/: celery_tasks.py  handler.py  service.py
examples/crud/: app.py  crud_module.py  requirements.txt
examples/database/: .gitignore  main.py  requirements.txt
examples/database/application/: __init__.py  controller.py  controllers.py  handler.py  service.py  services.py
examples/database/configuration/: settings.py  settings.yaml
examples/database/modules/: controllers.py  services.py
examples/database/resources/: application.toml
examples/database/sqlite_database/: controllers.py  services.py
examples/exception_handler/: application.py
examples/exceptions/: application.py
examples/exceptions/configuration/: settings.yaml
examples/from_request_param/: application.py
examples/hello_world/: application.py
examples/hello_world/configuration/: settings.py  settings.yaml
examples/htmx/: application.py
examples/htmx/configuration/: settings.yaml
examples/middleware/: main.py
examples/middleware/module/: auth.py  (+3 more)
examples/middleware_files/: application.py
examples/modules/: main.py
examples/param_converter/: application.py
examples/path_converter/: application.py
examples/path_param_converter/: application.py  main.py
examples/settings/: application.py  main.py
examples/sqlalchemy/: application.py
examples/structure/: main.py
examples/templates/: application.py
examples/websocket/: application.py  chat.py  chat_module.py  echo_chat.py  index.html  main.py
extensions/jinja/: index.html
extensions/overview/: index.html
extensions/redis/: index.html
extensions/sqlalchemy/: index.html
handlers/: index.html
logging/: index.html
middleware/: index.html
middleware/overview/: index.html
middleware/staticfiles_uploads/: index.html
pt/: index.html
pt/background/: index.html
pt/configuration/: index.html
pt/handlers/: index.html
pt/logging/: index.html
pt/routing/: index.html
pt/services/: index.html
pt/startup/: index.html
pt/structure/: index.html
pt/tutorial/: index.html
routing/: index.html
search/: search_index.json
services/: index.html
src/dependency_injector/: __init__.py  annotations.py  container.py  container_sync.py  decorators.py  errors.py  scan.py  service.py
src/selva/: __init__.py  configuration.py  decorators.py  logging.py  run.py
startup/: index.html
structure/: index.html
templates/: index.html
test/: __init__.py  test_call.py  test_create.py  test_dependency_loop.py  test_dependency_options.py  test_generics.py  test_named_dependencies.py  test_non_injectable.py  test_registry.py  test_scan_package.py  test_scopes.py  test_service_class.py  test_service_factory.py  test_service_function.py  test_unknown_service.py
test/services/: non_injectable.py
test/sync_tests/: __init__.py  test_call.py  test_create.py  test_dependency_loop.py  test_dependency_options.py  test_generics.py  test_named_dependencies.py  test_non_injectable.py  test_scan_package.py  test_scopes.py  test_service_class.py  test_service_function.py  test_unknown_service.py
tests/: conftest.py  fixtures.py  test_call.py  test_create.py  test_dependency_loop.py  test_dependency_options.py  test_generics.py  test_initialize.py  test_named_dependencies.py  test_non_injectable.py  test_scan_package.py  test_scopes.py  test_service_class.py  test_service_function.py  test_unknown_service.py
tests/configuration/: test_configuration.py  test_dotenv.py  test_environ.py  test_environment.py  test_logging.py  test_settings.py
tests/data/: test_sqlalchemy.py
tests/di/: conftest.py  fixtures.py  test_call.py  test_create.py  test_decorator.py  test_define_instance.py  test_dependency_complex_graph.py  test_dependency_loop.py  test_dependency_options.py  test_generics.py  test_initialize.py  test_interceptor.py  test_iter_service.py  test_lifecycle_callbacks.py  test_named_dependencies.py  test_non_injectable.py  test_register.py  test_register_decorated_class.py  test_resource.py  test_scan_package.py  test_scopes.py  test_service_class.py  test_service_function.py  test_service_generator.py  test_service_generator_async.py  test_startup.py  test_unknown_service.py
tests/ext/: test_extensions.py
tests/logs/: test_logging.py
tests/util/: test_get_base_types.py  test_import_item.py  test_package_scan.py
tests/utils/: test_get_base_types.py  test_maybe_async.py  test_maybe_async_blocking.py  test_maybe_async_sync.py
tests/web/: from_request_param.py  request_param_converter.py  test_background_tasks.py  test_configuration.py  test_context.py  test_delayed_tasks.py  test_error.py  test_errors.py  test_exception.py  test_excetion.py  test_middleware.py
tutorial/: index.html
(+380 files in other folders)
