[project]
name = "selva"
description = "ASGI Web Framework with Dependency Injection"
authors = [
    {name = "Livio Ribeiro", email = "livioribeiro@outlook.com"},
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/livioribeiro/selva"
keywords = ["asgi", "framework", "asyncio", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "asgikit~=0.11.0",
    "pydantic~=2.10.3",
    "python-dotenv~=1.0.1",
    "ruamel.yaml~=0.18.6",
    "structlog~=24.4.0",
]

[dependency-groups]
dev = [
    "uvicorn[standard]~=0.34",
    "granian~=1.7",
]
test = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
    "coverage[toml]~=7.6.9",
    "httpx~=0.28.1",
    "aiosqlite~=0.20.0",
    "psycopg[binary]~=3.2.3",
    "uvicorn[standard]~=0.34.0",
]
lint = [
    "ruff~=0.8",
    "mypy~=1.13",
    "black~=24.10",
    "isort~=5.13",
]
docs = [
    "mkdocs-material~=9.5.49"
]

[project.optional-dependencies]
jinja = ["jinja2~=3.1.4"]
sqlalchemy = ["SQLAlchemy[asyncio]~=2.0.36"]
redis = ["redis~=5.2.1"]
memcached = ["aiomcache~=0.8.2"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/selva/__version__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"