[project]
name = "selva"
description = "ASGI Web Framework with Dependency Injection"
authors = [
    {name = "Livio Ribeiro", email = "livioribeiro@outlook.com"},
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/livioribeiro/selva"
keywords = ["asgi", "framework", "asyncio", "web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
    "starlette~=0.45.3",
    "pydantic~=2.10.6",
    "python-dotenv~=1.0.1",
    "ruamel.yaml~=0.18.10",
    "structlog~=25.1.0",
]

[project.optional-dependencies]
jinja = ["jinja2~=3.1.5"]
mako = ["mako~=1.3.9"]
sqlalchemy = ["SQLAlchemy[asyncio]~=2.0.38"]
redis = ["redis~=5.2.1"]
memcached = ["aiomcache~=0.8.2"]

[dependency-groups]
dev = [
    "uvicorn[standard]~=0.34",
    "granian~=1.7",
]
test = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.3",
    "coverage~=7.6.12",
    "httpx~=0.28.1",
    "aiosqlite~=0.21.0",
    "psycopg[binary]~=3.2.4",
]
lint = [
    "pylint~=3.3",
    "ruff~=0.9",
    "mypy~=1.15",
    "isort~=6.0",
]
docs = [
    "mkdocs-material~=9.6.4",
    "mkdocs-static-i18n[material]~=1.3.0",
]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/selva/__version__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"